Fixed WebView+ problems: Avoided creation of unneeded shell instance. Fixed WebView cache mode and LudeiContentsIoThreadClient client

--- a/android/res/values-da/android_content_strings.xml
+++ b/android/res/values-da/android_content_strings.xml
@@ -6,7 +6,7 @@
 <string name="date_picker_dialog_title">"Angiv dato"</string>
 <string name="date_picker_dialog_set">"Angiv"</string>
 <string name="date_picker_dialog_clear">"Ryd"</string>
-<string name="date_picker_dialog_other_button_label">"Andre"</string>
+<string name="date_picker_dialog_other_button_label">"Andet"</string>
 <string name="date_time_picker_dialog_title">"Angiv dato og klokkeslæt"</string>
 <string name="time_picker_dialog_title">"Angiv klokkeslæt"</string>
 <string name="time_picker_dialog_am">"AM"</string>
