--- a/android/res/values-tl/android_ui_strings.xml
+++ b/android/res/values-tl/android_ui_strings.xml
@@ -7,7 +7,7 @@
 <string name="color_picker_saturation">"Saturation"</string>
 <string name="color_picker_value">"Value"</string>
 <string name="color_picker_button_set">"Itakda"</string>
-<string name="color_picker_button_cancel">"Kanselahin"</string>
+<string name="color_picker_button_cancel">"Ikansela"</string>
 <string name="color_picker_dialog_title">"Pumili ng kulay"</string>
 <string name="color_picker_button_red">"Pula"</string>
 <string name="color_picker_button_cyan">"Cyan"</string>
