--- a/android/res/values-ar/android_content_strings.xml
+++ b/android/res/values-ar/android_content_strings.xml
@@ -6,7 +6,7 @@
 <string name="date_picker_dialog_title">"تعيين التاريخ"</string>
 <string name="date_picker_dialog_set">"تعيين"</string>
 <string name="date_picker_dialog_clear">"محو"</string>
-<string name="date_picker_dialog_other_button_label">"غير ذلك"</string>
+<string name="date_picker_dialog_other_button_label">"أخرى"</string>
 <string name="date_time_picker_dialog_title">"تعيين التاريخ والوقت"</string>
 <string name="time_picker_dialog_title">"تعيين الوقت"</string>
 <string name="time_picker_dialog_am">"صباحًا"</string>
