--- a/android/res/values-ro/android_ui_strings.xml
+++ b/android/res/values-ro/android_ui_strings.xml
@@ -2,12 +2,12 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 <string name="low_memory_error">"Operația anterioară nu se poate finaliza, din cauza memoriei insuficiente"</string>
 <string name="opening_file_error">"Fișier. select. nu s-a deschis"</string>
-<string name="color_picker_button_more">"Mai mult"</string>
+<string name="color_picker_button_more">"Mai multe"</string>
 <string name="color_picker_hue">"Nuanță"</string>
 <string name="color_picker_saturation">"Saturație"</string>
 <string name="color_picker_value">"Valoare"</string>
 <string name="color_picker_button_set">"Setați"</string>
-<string name="color_picker_button_cancel">"Anulaţi"</string>
+<string name="color_picker_button_cancel">"Anulați"</string>
 <string name="color_picker_dialog_title">"Selectați culoarea"</string>
 <string name="color_picker_button_red">"Roșu"</string>
 <string name="color_picker_button_cyan">"Cyan"</string>
